--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swr": "^2.2.2"
   },
   "devDependencies": {
+    "@types/node": "^20.6.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
