--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "swr": "^2.2.2"
   },
   "devDependencies": {
