--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "styled-components": "^6.0.8",
     "swr": "^2.2.2"
   },
   "devDependencies": {
